--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "^2.5.6",
+    "handlebars": "^4.0.12",
     "jade": "~1.11.0",
     "mongoose": "^4.10.3",
     "morgan": "^1.9.1",
