--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vue-mall",
   "version": "1.0.1",
   "description": "Vue Mall ",
+  "main": "src/app.js",
   "author": "hao",
   "private": true,
   "scripts": {
@@ -26,7 +27,8 @@
     "vue-lazyload": "^1.0.4",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "yargs": "^12.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
